# mcp-libreoffice-calc

./: PUBLISHING.md  README.md  libremcp.py  pyproject.toml
src/: libremcp.py  main.py
tests/: test_cell_value_logic.py  test_pure_helpers.py  test_tools_mocked_uno.py  test_write_helpers.py
