[project]
name = "mcp-libreoffice-calc"
version = "0.1.0"
description = "Serveur MCP pour piloter LibreOffice Calc en direct via UNO"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Maxime et Code"}]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.10.1",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-libreoffice-calc = "libremcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
